(1) added a heuristic based version of the MCTS algorithm in order to test how efficient a heuristic is before training a neural network using alpha-zero, (2) fixed an issue with MCTS node caching, that was only caching the nodes immediately needed, instead of caching them all until they're needed, (3) cleaned up the atomic lazy reference and atomic recyclable reference API's and provided the ability to catch exception on the initializers, (4) decided to adapt game 2048 as a two player game for better MCTS adoption, (5) other minor fixes